<resources>
    <string name="app_name">Treasure</string>

    <string name="title_home">Beranda</string>
    <string name="title_exchange">Penukaran</string>
    <string name="title_scan">Scan</string>
    <string name="title_price">Harga</string>
    <string name="title_account">Akun</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_price_trash">Harga sampah</string>
    <string name="title_nominal">Nominal</string>
    <string name="title_confirmation">Konfirmasi</string>


    <string name="image_description">image</string>

    <string name="facebook_app_id">203835847961566</string>
    <string name="fb_login_protocol_scheme">fb203835847961566</string>


    <!--    LoginActivity-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="text_remember_me">Ingat Saya</string>
    <string name="text_forgot_password">Lupa Password?</string>
    <string name="text_sign_in">Masuk</string>
    <string name="text_or_sign_in">atau masuk dengan</string>
    <string name="text_ask_not_have_account">Belum punya akun Trashure?</string>
    <string name="text_sign_up">Daftar</string>

    <string name="text_reset_password">Reset Password</string>
    <string name="text_forgoten_hint">Masukkan email untuk mereset password kamu, dan cek email kamu untuk mengatur ulang password</string>

    <!--    SignUpFragment-->
    <string name="prompt_phone">Nomor HP</string>
    <string name="prompt_name">Nama</string>
    <string name="text_or_sign_up">atau daftar dengan</string>
    <string name="text_ask_have_account">Sudah punya akun Trashure?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_birtday">Tanggal Lahir</string>

    <!--    AccountFragment-->
    <string name="text_level">Level</string>
    <string name="text_saldo">Saldo</string>
    <string name="text_total">Total</string>
    <string name="text_logout">Keluar</string>

    <!--    EditProfileActiviy-->
    <string name="text_button_save">Simpan</string>
    <string name="text_edit_picture">Edit Gambar</string>

    <!--    HomeFragment-->
    <string name="text_waller">Dompet</string>
    <string name="text_level_home">Level :</string>
    <string name="text_trashbag_home">Trashbag :</string>
    <string name="text_deposit">Setoran</string>
    <string name="text_see_more">Lihat Semua</string>
    <string name="text_tips">Tips</string>

    <!--    ExchangeConfirmationActiviy-->
    <!--    ItemExchange-->
    <string name="text_pulsa">Pulsa</string>
    <string name="text_change">Tukar</string>
    <string name="prompt_nominal">Nominal</string>
    <string name="text_service_type">Jenis Layanan</string>
    <string name="text_title_number">Nomor</string>

    <!--    ExchangeStatusActiviy-->
    <string name="text_loading">Loading…</string>
    <string name="text_failed">Gagal</string>
    <string name="text_success">Berhasil</string>
    <string name="text_back">Kembali</string>

    <string name="text_prosess">Prosess</string>


    <!--    scanFragment-->
    <string name="text_hint_scan_qr_code">Arahkan ke QR code yang ada pada Trashbag</string>
    <string name="text_hint_or_use_id">atau masukkan kode ID Trashbag</string>
    <string name="hint_enter_id">Masukkan ID</string>
    <string name="text_input">Input</string>
    <string name="title_setting">Pengaturan</string>
    <string name="title_notification">Notifikasi</string>
    <string name="title_detail_transaction">Penukaran %s</string>
    <string name="gunakan_kamera_untuk_scan_qr_code">Gunakan kamera untuk scan QR Code</string>
    <string name="sampah_terkumpul">Sampah Terkumpul</string>


</resources>