<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_exchange"
        android:icon="@drawable/ic_exchange"
        android:title="@string/title_exchange" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_price"
        android:icon="@drawable/ic_price"
        android:title="@string/title_price" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person"
        android:title="@string/title_account" />

</menu>