<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingTop="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp"
            tools:context=".view.login.LoginActivity">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="76dp"
                android:layout_height="54dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sf_pro_semibold"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageLogo" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/colorTextHint"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorTextHint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/colorTextHint"
                app:endIconTint="@color/colorPrimary"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFieldEmail"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorTextHint" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="24dp"
                android:minHeight="28dp"
                android:text="@string/text_remember_me"
                android:textColor="@color/colorTextButton1"
                app:buttonTint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="@+id/textFieldPassword"
                app:layout_constraintTop_toBottomOf="@+id/textFieldPassword"
                app:useMaterialThemeColors="false" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:includeFontPadding="false"
                android:minHeight="28dp"
                android:text="@string/text_forgot_password"
                android:textAllCaps="true"
                android:textColor="@color/colorTextButton1"
                app:layout_constraintEnd_toEndOf="@+id/textFieldPassword"
                app:layout_constraintTop_toBottomOf="@+id/textFieldPassword" />

            <Button
                android:id="@+id/buttonSignIn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="48dp"
                android:background="@drawable/background_ractangel_radius_4dp"
                android:text="@string/text_sign_in"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                app:shapeAppearance="?attr/cornerRadius" />

            <TextView
                android:id="@+id/textOrLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/text_or_sign_in"
                android:textColor="#33000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

            <ImageButton
                android:id="@+id/buttonFacebookSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_ractangel_radius_4dp"
                android:contentDescription="@string/image_description"
                android:padding="10dp"
                android:src="@drawable/ic_facebook"
                app:layout_constraintBottom_toBottomOf="@+id/buttonGoogleSign"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonGoogleSign"
                app:layout_constraintTop_toTopOf="@+id/buttonGoogleSign" />

            <ImageButton
                android:id="@+id/buttonGoogleSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_ractangel_radius_4dp"
                android:contentDescription="@string/image_description"
                android:padding="10dp"
                android:src="@drawable/ic_google_plus"
                app:layout_constraintEnd_toStartOf="@+id/buttonFacebookSign"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textOrLogin" />

            <TextView
                android:id="@+id/textAskNotHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sf_pro_regular"
                android:text="@string/text_ask_not_have_account"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonSignUp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonGoogleSign" />

            <Button
                android:id="@+id/buttonSignUp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:minHeight="28dp"
                android:text="@string/text_sign_up"
                android:textAllCaps="true"
                android:textColor="@color/colorTextButton1"
                app:layout_constraintBottom_toBottomOf="@+id/textAskNotHaveAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textAskNotHaveAccount"
                app:layout_constraintTop_toTopOf="@+id/textAskNotHaveAccount" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.33" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
